fixed choose files button
made choose files button 5px wider so it doesn't get cut off in mobile when turned sideways

--- a/static/style.scss
+++ b/static/style.scss
@@ -211,7 +211,7 @@ ul {
 
 #gpxFile {
   text-align: center;
-  max-width: 225px;
+  max-width: 230px;
 }
 
 #GPXSubmit {
